fix(codestyle): minor change